[project]
name = "background-monitoring-examples"
version = "0.1.0"
description = "A method of using background process monitor to update a main agent and append events."
authors = [
    { name = "Vishal Patel" }
]
license = {text = "Apache License 2.0"}
requires-python = ">=3.12"

dependencies = [
    "google-adk>=1.18.0",
    "google-genai>=1.9.0",
    "google-cloud-aiplatform>=1.127.0",
    "python-dotenv>=1.2.1",
]

[tool.hatch.build.targets.wheel]
# Ensures Hatchling bundles the correct source directories
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"